# fibery-mcp-server

./: README.md  pyproject.toml
src/: fibery_service.py  mcp_server.py
src/fibery_mcp_server/: __main__.py  fibery_client.py  server.py  utils.py
src/fibery_mcp_server/resources/: __init__.py  schema.py
src/fibery_mcp_server/tools/: __init__.py  create_entities_batch.py  create_entity.py  current_date.py  database.py  query.py  schema.py  update_entity.py
src/fibery_mcp_server/tools/descriptions/: create_entity  query
tests/: fibery_service_test.py
